# music-auto-show

./: .gitignore  AGENTS.md  Cargo.toml  README.md  __init__.py  audio_analyzer.py  audio_devices.py  buf.gen.yaml  build.rs  compile.sh  config.json  config.py  dmx_controller.py  effects_engine.py  environment-linux.yml  environment.yml  example_config.json  gui.py  gui_dialogs.py  gui_visualizer.py  headless.py  main.py  media_info.py  movement_modes.py  music-auto-show.spec  package.json  pyproject.toml  requirements.txt  run.sh  simulators.py  spotify_analyzer.py  visualization_modes.py
.github/workflows/: build.yml
.playwright-mcp/: page-2026-06-27T15-22-26-084Z.yml
docs/: migration.md  raspberry-pi-hotspot.md
frontend/: .oxfmtrc.json  .oxlintrc.json  README.md  components.json  index.html  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: app-shell.tsx  audio-scope.tsx  bluetooth-receiver-panel.tsx  confirm-credenza.tsx  credenza.tsx  fixture-editor.tsx  media-panel.tsx  page-skeleton.tsx  section-panel.tsx  slider-number-field.tsx  stage-view.tsx  tempo-pulse.tsx  theme-provider.tsx
frontend/src/hooks/: use-mobile.ts  use-snapshot-stream.ts
frontend/src/lib/: canvas.test.ts  canvas.ts  format.test.ts  format.ts  queries.ts  runtime-status.test.ts  runtime-status.ts  show-api.ts  snapshot-stream.test.ts  snapshot-stream.ts  stage-view-model.test.ts  stage-view-model.ts  tempo-pulse.test.ts  tempo-pulse.ts
frontend/src/routes/: __root.tsx  dmx.tsx  fixtures.tsx  index.tsx  settings.tsx
packaging/systemd/: music-auto-show.service
packaging/wireplumber/0.4/: 80-music-auto-show-headless.lua
packaging/wireplumber/0.5/: 80-music-auto-show-headless.conf
proto/music_auto_show/v1/: music_auto_show.proto
scripts/: install-rpi.sh  uninstall-rpi.sh
src/: api.rs  app.rs  assets.rs  audio.rs  beatnet.rs  bluetooth.rs  checkpoint.rs  cli.rs  config.rs  dmx.rs  effects.rs  hotspot.rs  lib.rs  main.rs  media.rs  proto.rs  shutdown.rs  timing.rs
web/: __init__.py  app.py  state.py
web/components/: __init__.py  audio_meters.py  audio_recorder.py  audio_visualizer.py  config_panel.py  dmx_universe.py  effects_panel.py  fixture_dialogs.py  fixture_list.py  io_status.py  stage_view.py
